--- a/chat_server/package.json
+++ b/chat_server/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "socket.io": "^4.5.1",
-    "fs": "^0.0.1-security"
+    "socket.io": "^4.5.1"
   }
 }
